--- a/about.html
+++ b/about.html
@@ -1748,7 +1748,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="favicon_io/Daniel's Image.jpeg" alt="Chinedu Okoro">
+                        <img src="favicon_io/Daniel's Image.jpeg" alt="UTIBE IME">
                         <div class="member-overlay">
                             <h3 style="color: white; margin: 0;">Utibe Daniel Ime</h3>
                             <p style="color: var(--accent-gold); margin: 5px 0 0 0;">CEO & Founder</p>
