--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | GreenLine Sustainable Ventures</title>
-    <link rel="shortcut icon" href="favicon_io/Greenline logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://2b3g9lhvel.ucarecd.net/cf3e0ac1-882a-4e47-9991-61bdea4713d3/Greenlinelogo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1748,7 +1748,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="favicon_io/Daniel's Image.jpeg" alt="UTIBE IME">
+                        <img src="https://2b3g9lhvel.ucarecd.net/b08e0a41-8013-47f9-a655-12a6515e6e52/DanielsImage.jpeg" alt="Chinedu Okoro">
                         <div class="member-overlay">
                             <h3 style="color: white; margin: 0;">Utibe Daniel Ime</h3>
                             <p style="color: var(--accent-gold); margin: 5px 0 0 0;">CEO & Founder</p>
