--- a/logistics.html
+++ b/logistics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GreenLine Logistics | Sustainable Transport Solutions</title>
-    <link rel="shortcut icon" href="favicon_io/Greenline logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://2b3g9lhvel.ucarecd.net/cf3e0ac1-882a-4e47-9991-61bdea4713d3/Greenlinelogo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
