--- a/about.html
+++ b/about.html
@@ -1759,7 +1759,7 @@
                         <div class="title">CEO & Founder</div>
                         <p>Visionary entrepreneur with 10+ years in sustainable business development. Founded GreenLine to prove that profitability and environmental stewardship can thrive together.</p>
                         <div class="member-social">
-                            <a href="www.linkedin.com/in/ime-daniel-132839"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/ime-daniel-13283911b"><i class="fab fa-linkedin-in"></i></a>
                             <a href="https://x.com/frozenbloxx"><i class="fab fa-twitter"></i></a>
                             <!-- <a href="#"><i class="fas fa-envelope"></i></a> -->
                         </div>
