--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenLine Sustainable Ventures | Premium Sustainable Solutions</title>
+    <title>GreenLine Sustainable Ventures | Precision in Every Venture. Quality in Every Outcome
+    </title>
     <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
