--- a/ads.html
+++ b/ads.html
@@ -1752,7 +1752,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Digital Marketing Ventures. All rights reserved. | Premium Digital Signage Solutions</p>
+                <p>© 2025 GreenLine Digital Marketing Ventures. All rights reserved. | Premium Digital Signage Solutions | ALSUTECH GLOBAL LTD</p>
             </div>
         </div>
     </footer>
