--- a/agric.html
+++ b/agric.html
@@ -1810,9 +1810,9 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Sustainable Farm">
+                    <img src="https://2b3g9lhvel.ucarecd.net/63fda26f-ea45-41ea-8240-bec20ace5d4d/rubber1.jpeg" alt="Sustainable Farm">
                     <div class="gallery-overlay">
-                        <h4>Organic Farming</h4>
+                        <h4>Rubber</h4>
                         <p>Chemical-free cultivation methods</p>
                     </div>
                 </div>
@@ -1823,34 +1823,34 @@
                         <p>High-yield crop production</p>
                     </div>
                 </div>
-                <!-- <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1559131397-f94da358a2c7?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Irrigation System">
+                <div class="gallery-item">
+                    <img src="https://2b3g9lhvel.ucarecd.net/4accfd27-5d4d-42bd-9c0c-f3093ffe6c1e/Goat2.jpeg" alt="Goat Farming">
                     <div class="gallery-overlay">
-                        <h4>Smart Irrigation</h4>
-                        <p>Water-efficient farming systems</p>
+                        <h4>Animal Farming</h4>
+                        <p>Goat Farming</p>
                     </div>
-                </div> -->
-                <!-- <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1592982537447-7444dc31f8e8?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Greenhouse Farming">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://2b3g9lhvel.ucarecd.net/31ad5a6a-b3de-4d83-9684-25cca0d473f7/Cow1.jpeg" alt="Cow Farming">
                     <div class="gallery-overlay">
-                        <h4>Greenhouse Technology</h4>
-                        <p>Controlled environment agriculture</p>
+                        <h4>Aniaml Farming</h4>
+                        <p>Cow farming</p>
                     </div>
-                </div> -->
-                <!-- <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" alt="Farm Processing">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://2b3g9lhvel.ucarecd.net/0a2a764e-92e6-4e36-a97b-cbc5028ef788/Goat1.jpeg" alt="Aniamls">
                     <div class="gallery-overlay">
-                        <h4>Value Addition</h4>
-                        <p>Post-harvest processing facilities</p>
+                        <h4>Goat Farming</h4>
+                        <p>Aniaml Farming</p>
                     </div>
-                </div> -->
-                <!-- <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1589923186741-b7d59d6b2c4a?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" alt="Farmer Training">
+                </div>
+                <div class="gallery-item">
+                    <img src="https://2b3g9lhvel.ucarecd.net/df29bed6-0997-432e-a335-b97cfb4df730/Cow2.jpeg" alt="Cow farming">
                     <div class="gallery-overlay">
-                        <h4>Farmer Education</h4>
-                        <p>Training on modern techniques</p>
+                        <h4>Cow Farming</h4>
+                        <p>Aniaml Farming</p>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -1937,7 +1937,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures. Agriculture Services Division. All rights reserved. | ALSUTECH SOLUTIONS</p>
+                <p>© 2025 GreenLine Sustainable Ventures. Agriculture Services Division. All rights reserved. | ALSUTECH GLOBAL LTD</p>
             </div>
         </div>
     </footer>
