--- a/estate.html
+++ b/estate.html
@@ -2125,7 +2125,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | Real Estate Division | ALSUTECH SOLUTIONS</p>
+                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | Real Estate Division | ALSUTECH GLOBAL LTD</p>
             </div>
         </div>
     </footer>
