--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | ALSUTECH SOLUTIONS | Building Sustainable Futures</p>
+                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | ALSUTECH GLOBAL LTD | Building Sustainable Futures</p>
             </div>
         </div>
     </footer>
