--- a/logistics.html
+++ b/logistics.html
@@ -2089,7 +2089,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures. Logistics Division. All rights reserved. | ALSUTECH SOLUTIONS</p>
+                <p>© 2025 GreenLine Sustainable Ventures. Logistics Division. All rights reserved. | ALSUTECH GLOBAL LTD</p>
             </div>
         </div>
     </footer>
