--- a/about.html
+++ b/about.html
@@ -1639,7 +1639,7 @@
                 </div>
                 
                 <div class="story-visual">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="GreenLine Team Collaboration">
+                    <img src="https://2b3g9lhvel.ucarecd.net/31ad5a6a-b3de-4d83-9684-25cca0d473f7/Cow1.jpeg" alt="Farming">
                 </div>
             </div>
         </div>
@@ -1748,7 +1748,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="https://2b3g9lhvel.ucarecd.net/b08e0a41-8013-47f9-a655-12a6515e6e52/DanielsImage.jpeg" alt="Chinedu Okoro">
+                        <img src="https://2b3g9lhvel.ucarecd.net/b08e0a41-8013-47f9-a655-12a6515e6e52/DanielsImage.jpeg" alt="Utibe Daniel">
                         <div class="member-overlay">
                             <h3 style="color: white; margin: 0;">Utibe Daniel Ime</h3>
                             <p style="color: var(--accent-gold); margin: 5px 0 0 0;">CEO & Founder</p>
@@ -1886,7 +1886,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | Business Plan 2025-2030 | Building Sustainable Futures</p>
+                <p>© 2025 GreenLine Sustainable Ventures. All rights reserved. | ALSUTECH GLOBAL LTD | Building Sustainable Futures</p>
             </div>
         </div>
     </footer>
