--- a/interior.html
+++ b/interior.html
@@ -2138,7 +2138,7 @@
             </div>
             
             <div class="copyright">
-                <p>© 2025 GreenLine Sustainable Ventures - Interior Design Division. All rights reserved. | ALSUTECH SOLUTIONS</a></p>
+                <p>© 2025 GreenLine Sustainable Ventures - Interior Design Division. All rights reserved. | ALSUTECH GLOBAL LTD</a></p>
             </div>
         </div>
     </footer>
