--- a/ads.html
+++ b/ads.html
@@ -1849,7 +1849,7 @@
                         <div class="carousel-slide active">
                             <img src="https://2b3g9lhvel.ucarecd.net/984c749e-ca5b-46f6-b903-2d8f0ec5fe9c/ADS1.jpeg" alt="Digital Signage">
                             <div class="slide-content">
-                                <h4>Advertisment Solutions</h4>
+                                <!-- <h4>Advertisment Solutions</h4> -->
                                 <!-- <p>Interactive digital signage in retail environments increases engagement by 87% and boosts sales conversions.</p> -->
                             </div>
                         </div>
