--- a/estate.html
+++ b/estate.html
@@ -6,11 +6,11 @@
     <title>Sustainable Real Estate | GreenLine Sustainable Ventures</title>
      <!-- Favicon-->
     <!-- <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon"> -->
-    <link rel="icon" href="/favicon (1).ico">
+    <!-- <link rel="icon" href="/favicon (1).ico"> -->
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512 .png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
