--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <!-- Favicon-->
     <!-- <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon"> -->
-    <!-- <link rel="icon" href="/favicon (1).ico"> -->
+    <link rel="icon" href="/favicon (1).ico">
     <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512 .png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
