--- a/agric.html
+++ b/agric.html
@@ -1846,10 +1846,10 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://2b3g9lhvel.ucarecd.net/0a2a764e-92e6-4e36-a97b-cbc5028ef788/Goat1.jpeg" alt="Aniamls">
+                    <img src="https://2b3g9lhvel.ucarecd.net/95a1b2d1-166a-4cda-b556-f87cb89ba66f/Cocoa.jpeg" alt="Cocoa Farming">
                     <div class="gallery-overlay">
-                        <h4>Goat Farming</h4>
-                        <p>Aniaml Farming</p>
+                        <h4>Cocoa Farming</h4>
+                        <!-- <p>Aniaml Farming</p>-->
                     </div>
                 </div>
                 <div class="gallery-item">
