--- a/agric.html
+++ b/agric.html
@@ -1825,10 +1825,10 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Crop Harvest">
+                    <img src="https://2b3g9lhvel.ucarecd.net/95a1b2d1-166a-4cda-b556-f87cb89ba66f/Cocoa.jpeg" alt="Cocoa Farming">
                     <div class="gallery-overlay">
-                        <h4>Bountiful Harvest</h4>
-                        <p>High-yield crop production</p>
+                        <h4>Cocoa Farming</h4>
+                        <!-- <p>Aniaml Farming</p>-->
                     </div>
                 </div>
                 <div class="gallery-item">
@@ -1846,10 +1846,10 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://2b3g9lhvel.ucarecd.net/95a1b2d1-166a-4cda-b556-f87cb89ba66f/Cocoa.jpeg" alt="Cocoa Farming">
+                    <img src="https://2b3g9lhvel.ucarecd.net/0a2a764e-92e6-4e36-a97b-cbc5028ef788/Goat1.jpeg" alt="Goat Farming">
                     <div class="gallery-overlay">
-                        <h4>Cocoa Farming</h4>
-                        <!-- <p>Aniaml Farming</p>-->
+                        <h4>Goat Farming</h4>
+                        <p>Aniaml Farming</p>
                     </div>
                 </div>
                 <div class="gallery-item">
